docs: Add DECISION and CROSS-CUTTING inline documentation comments to ReflectiveStrategy.java
Add 27 lines of inline documentation comments to ReflectiveStrategy.java covering:
- DECISION: Class-level rationale for centralized reflection invocation
  and exception normalization across strategy implementations
- CROSS-CUTTING: Package-level dependency documentation showing consumers
  (LegacyStrategy, ModernStrategy, CompositeStrategy, tests)
- DECISION: invoke() method - IllegalAccessException to
  UnsupportedOperationException mapping rationale for CompositeStrategy fallback
- DECISION: invokeChecked() method - generic checked exception variant
  rationale for type-safe propagation across strategies
- DECISION: Loader interface - Class.forName() abstraction rationale
  for testability of CompositeStrategy fallback chain

Zero production code changes. Comments only.